# studienarbeit-mp3-formatter

./: .travis.yml  README.md  doc-index.html  index.html  stack.yaml  studienarbeit-mp3-formatter.cabal  studienarbeit-mp3-formatter.haddock
.stack-work/install/x86_64-linux-tinfo6-nopie/lts-9.17/8.0.2/doc/: doc-index.html  index.html
.stack-work/install/x86_64-linux-tinfo6-nopie/lts-9.17/8.0.2/doc/all/: doc-index-62.html  doc-index-A.html  doc-index-All.html  (+21 more)
.stack-work/install/x86_64-linux-tinfo6-nopie/lts-9.17/8.0.2/flag-cache/: Glob-0.8.0-6atwLY5yCKm6L5lM4lQ3PZ  HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  QuickCheck-2.9.2-LvlomhGMxrFBkX1zwiWpQu  ansi-terminal-0.6.3.1-3RTqikoQf47ajVD9m8zgB  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  base-compat-0.9.3-KeJp8zYMpcS9WibvTcxU22  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  dlist-0.8.0.3-BHFBNaw8k6n9WiaUNzoXpk  ghc-paths-0.1.0.9-AhaDlGOsRAepox069XzG  hspec-2.4.4-Ct0Af2AzisB8bPqGMHHFvj  hspec-core-2.4.4-Ezb0jq4rRfBJWZtpolvs1E  hspec-discover-2.4.4-99Suq6sFZ1T6o4isjc43TZ  hspec-expectations-0.8.2-DujBeQFEMmfJJRLad7XQgd  primitive-0.6.2.0-4578caNkWQ54Gt1mxLF2Yh  quickcheck-io-0.2.0-4pLO1WRxoBW9gt8EnME0zS  random-1.1-9tceXaeYIMZ4JrKq20Egog  setenv-0.1.1.3-8dEhk6JWvlmCmVyBammSpu  stm-2.4.4.1-JQn4hNPyYjP5m9AcbI88Ve  studienarbeit-mp3-formatter-0.1.0.0-2bCzJDMcDFYDnyETEuPbbT  syb-0.7-4OKdCpwGutyB1rNRmoa0ya  taglib-0.1.1-BJkAvVQjvMIK66XwY02FGr  tf-random-0.5-CJZw1ZWS5MOJlR60HqKEZL  transformers-compat-0.5.1.4-IuFogs8HAVUJBWVNMhtssu  utf8-string-1.0.1.1-1DpjxLeTvGg7ttZZojxJR5
.stack-work/install/x86_64-linux-tinfo6-nopie/lts-9.17/8.0.2/pkgdb/: package.cache  studienarbeit-mp3-formatter-0.1.0.0-2bCzJDMcDFYDnyETEuPbbT.conf  taglib-0.1.1-BJkAvVQjvMIK66XwY02FGr.conf
app/: Main.hs
(+12 files in other folders)
