name:                studienarbeit-mp3-formatter
version:             0.1.0.0
synopsis:            Detect and correct mp3 files with incomplete ID3 tags.
homepage:            https://github.com/ob-fun-ws17/studienarbeit-mp3-formatter
license:             BSD3
license-file:        LICENSE
author:              Robin Wismeth
maintainer:          rwismeth@hm.edu
copyright:           2017 Robin Wismeth
category:            Sound
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
description:         Please see the README on Github at <https://github.com/ob-fun-ws17/studienarbeit-mp3-formatter>

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , idiii
  default-language:    Haskell2010

executable studienarbeit-mp3-formatter-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , idiii
                     , studienarbeit-mp3-formatter
  default-language:    Haskell2010

test-suite studienarbeit-mp3-formatter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , studienarbeit-mp3-formatter
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ob-fun-ws17/studienarbeit-mp3-formatter
